test_suite5/ALAN/test_suite/alan-2022-examples/failing/006080_mutation.alan
source v begin leave 43 = 1 not end
